--- a/男人的阴茎.css
+++ b/男人的阴茎.css
@@ -1,4 +1,12 @@
 
+      @media screen and (max-width: 600px) {
+  input[type="text"], textarea, input[type="submit"] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+
         .head {
             text-align: center;
         }
